# leptos-practice

./: .gitignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
src/: app.rs  main.rs
src/components/: counter.rs  mod.rs  pokemons.rs
src/components/ui/: badge.rs  button.rs  card.rs  mod.rs  nav.rs
src/model/: pokemon.rs
styles/: output.css
